# llms

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  GITHUB_OAUTH_SETUP.md  MANIFEST.in  PUBLISHING.md  README.md  bump.sh  docker-build.sh  docker-compose.local.yml  docker-compose.yml  docker-extract-configs.sh  launch.ps1  llms.sh  publish.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_package.py  test_server.py
.github/workflows/: docker-publish.yml  python-publish.yml  test-providers.yml
None/.llms/: llms.json
config-example/: README.md
docs/: AI_REFINERY_IMPLEMENTATION.md  IMAGE_GENERATION.md  STREAMING_IMPLEMENTATION.md
docs/checks/: 2025-10-27.txt  2025-11-02.txt  latest.txt
docs/tests/: PLAYWRIGHT_SELECTORS.md
llms/: __init__.py  __main__.py  index.html  llms.json  main.py
llms/ui/: ChatPrompt.mjs  ModelSelector.mjs  SettingsDialog.mjs  ai.mjs  app.css  streaming.mjs  tailwind.input.css  threadStore.mjs
llms/ui/lib/: charts.mjs
scripts/: anthropic_pricing.json  deprecated.sh  google_pricing.json  grok_pricing.json  llms-deprecated.json  mistral_pricing.json  openai_pricing.json  openai_pricing.md  openai_pricing.py  openai_pricing_all.json  openrouter_pricing.json  openrouter_pricing.py  openrouter_pricing_all.json  qwen_pricing.json  update.py  utils.py  z.ai_pricing.json
tests/: test_app_ui.py
